bevy_asset_loader/tests/ui_with_2d_3d_features/tuple.stderr
error: only named fields are supported to derive AssetCollection
 --> $DIR/tuple.rs:7:12
  |
7 | struct Test(usize);
  |            ^^^^^^^
