bevy_asset_loader/tests/ui_with_2d_3d_features/tuple.rs
use bevy_asset_loader::prelude::*;
use bevy::prelude::*;

fn main() {}

#[derive(AssetCollection, Resource)]
struct Test(usize);
